fixed alignment of mute button for portrait view

--- a/_includes/css/site/mobile.css
+++ b/_includes/css/site/mobile.css
@@ -203,6 +203,10 @@
 				margin-right:7px;
 			}
 			
+			h2 {
+			    margin-right:10px;
+			}
+			
 			footer {
 			    width:300px;
 			    margin:0 auto;
